--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-toastify": "^10.0.4",
     "sweetalert2": "^11.10.5",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
